--- a/200-bab-2-tinjauan-pustaka.tex
+++ b/200-bab-2-tinjauan-pustaka.tex
@@ -6,25 +6,6 @@
 \setcounter{figure}{0} 
 \setcounter{table}{0}
 
-\section{Latar Belakang Penyusunan SOP Administrasi Pemerintahan}
-
-Tujuan kebijakan Reformasi Birokrasi di Indonesia adalah untuk membangun profil
-dan perilaku aparatur negara yang memiliki integritas, produktivitas, dan
-bertanggung jawab serta memiliki kemampuan memberikan pelayanan yang prima
-melalui perubahan pola pikir (\textit{mind set}) dan budaya kerja (\textit{culture set})
-dalam sistem manajemen pemerintahan.
-
-Reformasi Birokrasi mencakup delapan area perubahan utama pada instansi
-pemerintah di pusat dan daerah, meliputi organisasi, tata laksana, peraturan
-perundang-undangan, sumber daya manusia aparatur, pengawasan, akuntabilitas,
-pelayanan publik, serta perubahan pola pikir dan budaya kerja aparatur.
-
-Pada hakikatnya perubahan ketatalaksanaan diarahkan untuk melakukan penataan
-tata laksana instansi pemerintah yang efektif dan efisien. Salah satu upaya penataan
-tata laksana diwujudkan dalam bentuk penyusunan dan implementasi Standar
-Operasional Prosedur Administrasi Pemerintahan (SOP AP) dalam pelaksanaan tugas
-dan fungsi aparatur pemerintah.
-
 \section{Pengertian Standar Operasional Prosedur Administrasi Pemerintahan}
 
 Standar Operasional Prosedur adalah serangkaian instruksi tertulis yang dibakukan
@@ -65,17 +46,159 @@ penting, serta terdokumentasi dengan baik.
 
 \section{Jenis Standar Operasional Prosedur Administrasi Pemerintahan}
 
-Berdasarkan sifat kegiatannya, SOP Administrasi Pemerintahan terdiri atas SOP
-Teknis dan SOP Administratif. SOP Teknis merupakan prosedur standar yang sangat
-rinci dari kegiatan yang dilakukan oleh satu orang aparatur atau satu jabatan.
-Sementara itu, SOP Administratif merupakan prosedur standar yang bersifat umum
-dan tidak rinci dari kegiatan yang dilakukan oleh lebih dari satu aparatur atau
-jabatan.
+Standar Operasional Prosedur Administrasi Pemerintahan dapat dibedakan ke dalam
+beberapa jenis berdasarkan sifat kegiatan, cakupan dan besaran kegiatan,
+cakupan dan kelengkapan kegiatan, serta cakupan dan jenis kegiatan.
 
-Berdasarkan cakupan dan besaran kegiatan, SOP Administrasi Pemerintahan
-dibedakan menjadi SOP Makro dan SOP Mikro. SOP Makro mencakup beberapa SOP
-Mikro yang membentuk satu rangkaian kegiatan, sedangkan SOP Mikro merupakan
-bagian dari SOP Makro.
+\subsection{SOP Berdasarkan Sifat Kegiatan}
+
+Berdasarkan sifat kegiatannya, Standar Operasional Prosedur Administrasi
+Pemerintahan dibedakan menjadi dua jenis, yaitu:
+
+\begin{enumerate}
+    \item \textbf{SOP Teknis}
+
+    SOP Teknis merupakan prosedur standar yang sangat rinci dari kegiatan yang
+    dilakukan oleh satu orang aparatur atau satu jabatan. SOP Teknis memuat
+    tahapan kegiatan yang bersifat teknis dan spesifik, sehingga hanya dapat
+    dilaksanakan oleh aparatur tertentu sesuai dengan kompetensi dan
+    kewenangannya.
+
+    \item \textbf{SOP Administratif}
+
+    SOP Administratif merupakan prosedur standar yang bersifat umum dan tidak
+    rinci dari kegiatan yang dilakukan oleh lebih dari satu orang aparatur atau
+    jabatan. SOP Administratif biasanya menggambarkan alur kegiatan yang
+    melibatkan beberapa unit kerja atau jabatan dalam satu rangkaian proses
+    administrasi pemerintahan.
+\end{enumerate}
+
+\subsection{SOP Berdasarkan Cakupan dan Besaran Kegiatan}
+
+Berdasarkan cakupan dan besaran kegiatannya, Standar Operasional Prosedur
+Administrasi Pemerintahan dibedakan menjadi dua jenis, yaitu:
+
+\begin{enumerate}
+    \item \textbf{SOP Makro}
+
+    SOP Makro merupakan SOP yang menggambarkan rangkaian kegiatan secara
+    umum dan mencakup beberapa SOP Mikro. SOP Makro digunakan untuk
+    memberikan gambaran menyeluruh mengenai proses administrasi
+    pemerintahan dalam suatu organisasi atau unit kerja.
+
+    \item \textbf{SOP Mikro}
+
+    SOP Mikro merupakan SOP yang menggambarkan kegiatan secara rinci dan
+    merupakan bagian dari SOP Makro. SOP Mikro berfungsi sebagai pedoman
+    operasional yang menjelaskan tahapan kegiatan secara detail dan teknis,
+    sehingga dapat langsung digunakan oleh aparatur dalam melaksanakan
+    tugasnya.
+\end{enumerate}
+
+\subsection{SOP Menurut Cakupan dan Kelengkapan Kegiatan}
+
+Berdasarkan cakupan dan kelengkapan kegiatannya, Standar Operasional Prosedur
+Administrasi Pemerintahan dibedakan menjadi dua jenis, yaitu:
+
+\begin{enumerate}
+    \item \textbf{SOP Lengkap}
+
+    SOP Lengkap merupakan SOP yang memuat seluruh tahapan kegiatan secara
+    utuh dan menyeluruh, mulai dari kegiatan awal hingga kegiatan akhir.
+    SOP Lengkap digunakan sebagai pedoman kerja yang komprehensif dalam
+    pelaksanaan suatu proses administrasi pemerintahan.
+
+    \item \textbf{SOP Tidak Lengkap}
+
+    SOP Tidak Lengkap merupakan SOP yang hanya memuat sebagian tahapan
+    kegiatan dari suatu proses administrasi pemerintahan. SOP jenis ini biasanya
+    digunakan sebagai bagian dari SOP yang lebih besar atau sebagai pelengkap
+    dalam pelaksanaan SOP lainnya.
+\end{enumerate}
+
+\subsection{SOP Menurut Cakupan dan Jenis Kegiatan}
+
+Berdasarkan cakupan dan jenis kegiatannya, Standar Operasional Prosedur
+Administrasi Pemerintahan dibedakan menjadi dua jenis, yaitu:
+
+\begin{enumerate}
+    \item \textbf{SOP Internal}
+
+    SOP Internal merupakan SOP yang mengatur pelaksanaan kegiatan yang
+    dilakukan di dalam lingkungan organisasi atau unit kerja tertentu. SOP
+    Internal tidak melibatkan pihak di luar organisasi dan digunakan sebagai
+    pedoman kerja internal aparatur.
+
+    \item \textbf{SOP Eksternal}
+
+    SOP Eksternal merupakan SOP yang mengatur pelaksanaan kegiatan yang
+    melibatkan pihak di luar organisasi pemerintah. SOP Eksternal biasanya
+    berkaitan dengan pelayanan publik atau kegiatan lain yang berhubungan
+    langsung dengan masyarakat atau instansi lain.
+
+\end{enumerate}
+
+\section{Format SOP}
+
+Empat faktor yang dapat dijadikan dasar dalam penentuan format 
+penyusunan SOP yang akan dipakai oleh suatu organisasi adalah:  
+(1) berapa banyak keputusan yang akan dibuat dalam suatu prosedur;    
+(2) berapa banyak langkah dan sub langkah yang diperlukan dalam suatu 
+prosedur; (3) siapa yang dijadikan target sebagai pelaksana SOP; dan       
+(4) apa tujuan yang ingin dicapai dalam pembuatan SOP ini. 
+Format terbaik SOP adalah format yang sederhana dan dapat 
+menyampaikan informasi yang dibutuhkan secara tepat serta memfasilitasi 
+implementasi SOP secara konsisten sesuai dengan tujuan penyusunan 
+SOP.
+
+\subsection{Format Umum SOP}
+
+\begin{enumerate}
+    \item \textbf{Langkah sederhana (Simple Steps)}\\
+    Simple steps adalah bentuk SOP yang paling sederhana. SOP ini  biasanya digunakan jika prosedur yang akan disusun hanya memuat  sedikit kegiatan dan memerlukan sedikit keputusan yang bersifat sederhana.
+    \item \textbf{Tahapan berurutan (Hierarchical Steps)}\\
+    Hierarchical Steps ini merupakan format pengembangan dari simple steps. Format ini digunakan jika prosedur yang disusun panjang, lebih dari 10 langkah dan membutuhkan informasi lebih detail, akan tetapi hanya memerlukan sedikit pengambilan keputusan.
+    \item \textbf{Grafik (Graphic)}\\
+    Format Grafik (graphic) dipilih, jika prosedur yang disusun menghendaki kegiatan yang panjang dan spesifik. Dalam format ini proses yang panjang tersebut dijabarkan ke dalam sub-sub proses yang lebih pendek yang hanya berisi beberapa langkah. Format ini juga bisa digunakan jika dalam menggambarkan prosedur diperlukan adanya suatu foto atau diagram.  Salah satu varian dari SOP format ini adalah SOP Format Annotated Picture (gambar yang diberi keterangan) yang biasanya ditujukan untuk pemohon atau pengguna jasa sebuah pelayanan. 
+    \item \textbf{Diagram Alir (Flowcharts) }\\
+    Flowcharts merupakan format yang biasa digunakan jika dalam SOP tersebut diperlukan pengambilan keputusan yang banyak (kompleks) dan membutuhkan opsi jawaban (alternatif jawaban) seperti: jawaban “ya” atau “tidak”, “lengkap” atau “tidak”, “benar” atau “salah”, dsb. yang akan mempengaruhi sub langkah berikutnya. Format ini juga menyediakan mekanisme yang mudah untuk diikuti dan dilaksanakan oleh para pelaksana (pegawai) melalui serangkaian langkah-langkah sebagai hasil dari keputusan yang telah diambil. Format SOP dalam bentuk flowcharts ini terdiri dari 2 (dua) jenis yaitu: 
+    
+    \begin{itemize}
+        \item \textbf{Linear Flowcharts (Diagram Alir Linier)}\\
+        Ciri utama dari format linear flowcharts ini adalah ada unsur kegiatan yang disatukan, yaitu: unsur kegiatan atau unsur pelaksananya dan menuliskan rumusan kegiatan secara singkat di dalam simbol yang dipakai. SOP format ini umumnya dipakai pada SOP yang bersifat teknis.
+
+        \item \textbf{Branching Flowcharts (diagram alir bercabang)}\\
+        Format Branching Flowcharts memiliki ciri utama dipisahkannya unsur pelaksana dalam kolom-kolom yang terpisah dari kolom kegiatan dan menggambarkan prosedur kegiatan dalam bentuk simbol yang dihubungkan secara bercabang-cabang.
+        
+    \end{itemize}
+
+\end{enumerate}
+
+\subsection{Format SOP AP}
+
+\begin{enumerate}
+    \item \textbf{Format Diagram Alir Bercabang (Branching Flowcharts) }\\
+    Format yang dipergunakan dalam SOP AP adalah format diagram alir bercabang (branching flowcharts) dan tidak ada format lainnya yang dipakai. Hal ini diasumsikan bahwa prosedur pelaksanaan tugas dan fungsi instansi pemerintah termasuk di dalamnya Kementerian/Lembaga dan Pemerintah Daerah memuat kegiatan yang banyak (lebih dari sepuluh) dan memerlukan pengambilan keputusan yang banyak.
+
+    \item \textbf{Menggunakan Flowcharts}\\
+    Bagian Flowchart merupakan uraian mengenai langkah-langkah (prosedur) kegiatan beserta mutu baku dan keterangan yang diperlukan. Bagian Flowchart ini berupa flowcharts yang menjelaskan langkah-langkah kegiatan secara berurutan dan sistematis dari prosedur yang distandarkan, yang berisi: Nomor kegiatan; Uraian kegiatan yang berisi langkah-langkah (prosedur); Pelaksana yang merupakan pelaku (aktor) kegiatan; Mutu Baku yang berisi kelengkapan, waktu, output dan keterangan. Agar SOP AP ini terkait dengan kinerja, maka setiap aktivitas hendaknya mengidentifikasikan mutu baku tertentu, seperti: waktu yang diperlukan untuk menyelesaikan persyaratan/kelengkapan yang diperlukan (standar input) dan outputnya.
+    Simbol yang digunakan dalam SOP AP hanya terdiri dari 5 (lima) simbol, yaitu: 4 (empat) simbol dasar flowcharts (Basic Symbol of Flowcharts) dan 1 (satu) simbol penghubung ganti halaman (Off-Page Conector). Kelima simbol yang dipergunakan tersebut adalah sebagai berikut:
+
+    \begin{itemize}
+        \item Simbol Kapsul/Terminator untuk mendeskripsikan kegiatan mulai dan berakhir; 
+        \item Simbol Kotak/Process untuk mendeskripsikan proses atau kegiatan eksekusi; 
+        \item Simbol Belah Ketupat/Decision untuk mendeskripsikan kegiatan pengambilan keputusan; 
+        \item Simbol Anak Panah/Panah/Arrow untuk mendeskrpsikan arah kegiatan (arah proses kegiatan); 
+        \item Simbol Segilima/Off-Page Connector  untuk mendeskripsikan hubungan antar simbol yang berbeda halaman. 
+    \end{itemize}
+\end{enumerate}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=13.45cm]{image/02-format-sop.png}
+    \caption{Contoh Format SOP Administrasi Pemerintahan}
+    \label{fig:bagan-alir}
+\end{figure}
 
 \section{Kedudukan SOP dalam Penataan Tata Laksana Pemerintahan}
 
