--- a/300-bab-3-metodologi-dan-mekanisme-pelaksanaan.tex
+++ b/300-bab-3-metodologi-dan-mekanisme-pelaksanaan.tex
@@ -83,6 +83,13 @@ Metode penyusunan SOP dilaksanakan dengan mengacu pada siklus penyusunan
 SOP Administrasi Pemerintahan, yang meliputi tahapan pengumpulan data,
 pengorganisasian, dan pengembangan SOP.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=13.45cm]{image/03-tahapan-penyusunan.png}
+    \caption{Rincian Tahapan Penyusunan SOP AP}
+    \label{fig:bagan-alir}
+\end{figure}
+
 \subsection{Tahap Persiapan dan Perencanaan}
 
 Tahap persiapan dan perencanaan merupakan tahapan awal dalam pelaksanaan
