Penambahan Sampul, background, kata pengatar, penutup

--- a/001-kata-pengantar-pendahuluan.tex
+++ b/001-kata-pengantar-pendahuluan.tex
@@ -23,7 +23,7 @@ lingkungan Pemerintah Kabupaten Cianjur.
 
 \vspace{1cm}
 
-\noindent Cianjur, Januari 2026 \\
+\noindent Cianjur, Oktober 2025 \\
 
 \vspace{12pt}
 \vspace{12pt}
