--- a/400-bab-4-pemanfaatan-aplikasi.tex
+++ b/400-bab-4-pemanfaatan-aplikasi.tex
@@ -259,3 +259,8 @@ antara lain:
     Setelah melengkapi informasi yang diminta, klik tombol "Terbitkan SOP" dan SOP tersebut akan diterbitkan dan Status menjadi Terbit.
 
 \end{enumerate}
+
+Dengan pemanfaatan aplikasi penyusun SOP ini, Pemerintah Kabupaten Cianjur
+diharapkan dapat meningkatkan efektivitas penyusunan dan penataan SOP,
+memperkuat monitoring progres, serta memastikan bahwa SOP yang dihasilkan
+tersusun secara sistematis, terstandar, dan dapat dipertanggungjawabkan.
