--- a/laporan-akhir.tex
+++ b/laporan-akhir.tex
@@ -56,18 +56,18 @@
 
 \begin{document}
 
-% \includepdf[pages=-]{media/sampul/sampul-pendahuluan.pdf}
+\includepdf[pages=-]{file/sampul/00-sampul-akhir.pdf}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
 
-% \backgroundsetup{
-%   scale=1,
-%   angle=0,
-%   opacity=1,
-%   vshift=0pt, hshift=0pt,
-%   contents={\includegraphics[width=\paperwidth,height=\paperheight]{media/background.pdf}}
-% }
+\backgroundsetup{
+  scale=1,
+  angle=0,
+  opacity=1,
+  vshift=0pt, hshift=0pt,
+  contents={\includegraphics[width=\paperwidth,height=\paperheight]{file/00-background.pdf}}
+}
 
 \input{001-kata-pengantar-pendahuluan.tex}
 
@@ -98,19 +98,11 @@
 
 \newpage
 
-\input{400-bab-4-pembahasan.tex}
-
-\input{401-rekapitulasi-sop-perangkat-daerah.tex}
-
-\input{402-daftar-sop-perangkat-daerah.tex}
-
-% \newpage
-
-% \input{bab-5-kesimpulan-dan-rekomendasi.tex}
+\input{400-bab-4-pemanfaatan-aplikasi.tex}
 
 \newpage
 
-\input{600-penutup-pendahuluan.tex}
+\input{600-penutup-akhir.tex}
 
 \end{document}
 
