--- a/laporan-antara.tex
+++ b/laporan-antara.tex
@@ -56,18 +56,19 @@
 
 \begin{document}
 
-% \includepdf[pages=-]{media/sampul/sampul-pendahuluan.pdf}
+\includepdf[pages=-]{file/sampul/00-sampul-antara.pdf}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
 
-% \backgroundsetup{
-%   scale=1,
-%   angle=0,
-%   opacity=1,
-%   vshift=0pt, hshift=0pt,
-%   contents={\includegraphics[width=\paperwidth,height=\paperheight]{media/background.pdf}}
-% }
+\backgroundsetup{
+  scale=1,
+  angle=0,
+  opacity=1,
+  vshift=0pt, hshift=0pt,
+  contents={\includegraphics[width=\paperwidth,height=\paperheight]{file/00-background.pdf}}
+}
+
 
 \input{001-kata-pengantar-antara.tex}
 
