Penyesuaian penutup antara

--- a/600-penutup-antara.tex
+++ b/600-penutup-antara.tex
@@ -1,7 +1,7 @@
 \chapter*{BAB V \\ PENUTUP}
 \addcontentsline{toc}{chapter}{BAB V PENUTUP}
 
-Demikian \textbf{Laporan Antara} ini disusun sebagai bentuk pelaporan perkembangan
+Demikian \textbf{Laporan Antara} ini disusun sebagai bentuk pelaporan perkembangan dalam
 pelaksanaan kegiatan penyusunan dan penataan Standar Operasional Prosedur
 (SOP) di lingkungan Pemerintah Kabupaten Cianjur. Laporan ini memberikan
 gambaran mengenai capaian sementara, proses yang telah dilaksanakan, serta
