--- a/600-penutup-akhir.tex
+++ b/600-penutup-akhir.tex
@@ -1,5 +1,5 @@
-\chapter*{BAB V \\ PENUTUP}
-\addcontentsline{toc}{chapter}{BAB V PENUTUP}
+\chapter*{BAB VI \\ PENUTUP}
+\addcontentsline{toc}{chapter}{BAB VI PENUTUP}
 
 Demikian \textbf{Laporan Akhir Penyusunan dan Penataan Standar Operasional
 Prosedur (SOP)} di lingkungan Pemerintah Kabupaten Cianjur disusun sebagai
