--- a/laporan-akhir.tex
+++ b/laporan-akhir.tex
@@ -102,6 +102,12 @@
 
 \newpage
 
+\input{500-bab-5-pembahasan.tex}
+
+\input{502-bab-5-daftar-sop.tex}
+
+\newpage
+
 \input{600-penutup-akhir.tex}
 
 \end{document}
