--- a/502-bab-5-daftar-sop.tex
+++ b/502-bab-5-daftar-sop.tex
@@ -30,3 +30,5 @@
 \input{subcontents/502/26-badan-kepegawaian-dan-pengembangan-sdm.tex}
 \input{subcontents/502/27-badan-penanggulangan-bencana.tex}
 \input{subcontents/502/28-badan-kesatuan-bangsa.tex}
+\newpage
+\input{subcontents/502/29-rsud-puskesmas.tex}
