Penyempurnaan BAB 5 Pembahasan

--- a/500-bab-5-pembahasan.tex
+++ b/500-bab-5-pembahasan.tex
@@ -80,91 +80,93 @@ fungsi organisasi.
 \hline
 \endlastfoot
 
-1  & Badan Perencanaan Pembangunan, Riset dan Inovasi Daerah & 6  \\ \hline
-2  & Dinas Kependudukan dan Pencatatan Sipil & 28 \\ \hline
-3  & RSUD dan Puskesmas & 64 \\ \hline
-4  & Kecamatan & 2 \\ \hline
-5  & Sekretariat DPRD & 65 \\ \hline
-6  & Badan Kepegawaian dan Pengembangan Sumber Daya Manusia & 14 \\ \hline
-7  & Inspektorat Daerah & 1 \\ \hline
-8  & Bagian Pemerintahan Sekretariat Daerah & 0 \\ \hline
-9  & Bagian Kesejahteraan Rakyat Sekretariat Daerah & 0 \\ \hline
-10 & Bagian Hukum Sekretariat Daerah & 0 \\ \hline
-11 & Bagian Administrasi Pembangunan Sekretariat Daerah & 0 \\ \hline
-12 & Bagian Perekonomian dan Sumber Daya Alam Sekretariat Daerah & 0 \\ \hline
-13 & Bagian PBJ Sekretariat Daerah & 0 \\ \hline
-14 & Bagian Umum dan Keuangan Sekretariat Daerah & 1 \\ \hline
-15 & Bagian Organisasi Sekretariat Daerah & 0 \\ \hline
-16 & Bagian Protokol dan Komunikasi Pimpinan Sekretariat Daerah & 0 \\ \hline
-17 & Dinas Komunikasi, Informatika dan Persandian & 8 \\ \hline
-18 & Badan Pendapatan Daerah & 8 \\ \hline
-19 & Badan Keuangan dan Aset Daerah & 26 \\ \hline
-20 & Dinas Arsip dan Perpustakaan & 23 \\ \hline
-21 & Dinas Kesehatan & 46 \\ \hline
-22 & Dinas Pendidikan, Pemuda dan Olahraga & 1 \\ \hline
-23 & Dinas Kebudayaan dan Pariwisata & 2 \\ \hline
-24 & Badan Kesatuan Bangsa dan Politik & 2 \\ \hline
-25 & Dinas Pengendalian Penduduk, Keluarga Berencana, Pemberdayaan Perempuan, dan Perlindungan Anak & 38 \\ \hline
-26 & Satuan Polisi Pamong Praja dan Pemadam Kebakaran & 5 \\ \hline
-27 & Dinas Pertanian, Hortikultura, dan Perkebunan & 0 \\ \hline
-28 & Dinas Peternakan, Kesehatan Hewan dan Perikanan & 31 \\ \hline
-29 & Dinas Koperasi, Usaha Kecil, Menengah, Perdagangan dan Perindustrian & 10 \\ \hline
-30 & Dinas Tenaga Kerja & 4 \\ \hline
-31 & Dinas Pangan & 0 \\ \hline
-32 & Dinas Pekerjaan Umum dan Tata Ruang & 6 \\ \hline
-33 & Dinas Perumahan dan Kawasan Permukiman & 0 \\ \hline
-34 & Dinas Perhubungan & 2 \\ \hline
-35 & Dinas Lingkungan Hidup & 7 \\ \hline
-36 & Badan Penanggulangan Bencana Daerah & 22 \\ \hline
-37 & Dinas Sosial & 37 \\ \hline
-38 & Dinas Penanaman Modal dan Pelayanan Terpadu Satu Pintu & 6 \\ \hline
-39 & Dinas Pemberdayaan Masyarakat Desa & 10 \\ \hline
-40 & Kecamatan Agrabinta & 8 \\ \hline
-41 & Kecamatan Bojongpicung & 2 \\ \hline
-42 & Kecamatan Cianjur & 13 \\ \hline
-43 & Kecamatan Cibeber & 20 \\ \hline
-44 & Kecamatan Cilaku & 10 \\ \hline
-45 & Kecamatan Ciranjang & 2 \\ \hline
-46 & Kecamatan Cugenang & 16 \\ \hline
-47 & Kecamatan Cikalongkulon & 2 \\ \hline
-48 & Kecamatan Campaka & 0 \\ \hline
-49 & Kecamatan Cibinong & 5 \\ \hline
-50 & Kecamatan Cidaun & 2 \\ \hline
-51 & Kecamatan Campakamulya & 1 \\ \hline
-52 & Kecamatan Cikadu & 1 \\ \hline
-53 & Kecamatan Cijati & 1 \\ \hline
-54 & Kecamatan Cipanas & 10 \\ \hline
-55 & Kecamatan Gekbrong & 6 \\ \hline
-56 & Kecamatan Haurwangi & 2 \\ \hline
-57 & Kecamatan Karangtengah & 1 \\ \hline
-58 & Kecamatan Kadupandak & 1 \\ \hline
-59 & Kecamatan Leles & 3 \\ \hline
-60 & Kecamatan Mande & 6 \\ \hline
-61 & Kecamatan Naringgul & 6 \\ \hline
-62 & Kecamatan Pacet & 20 \\ \hline
-63 & Kecamatan Pagelaran & 1 \\ \hline
-64 & Kecamatan Pasirkuda & 0 \\ \hline
-65 & Kecamatan Sukaluyu & 4 \\ \hline
-66 & Kecamatan Sukaresmi & 14 \\ \hline
-67 & Kecamatan Sukanagara & 5 \\ \hline
-68 & Kecamatan Sindangbarang & 1 \\ \hline
-69 & Kecamatan Takokak & 6 \\ \hline
-70 & Kecamatan Tanggeung & 1 \\ \hline
-71 & Kecamatan Warungkondang & 0 \\ \hline
-72 & Sekretariat Daerah & 5 \\ \hline
-73 & RSUD Sayang & 1 \\ \hline
-74 & RSUD Cimacan & 0 \\ \hline
-75 & RSUD Pagelaran & 0 \\ \hline
-76 & RSUD Sindangbarang & 0 \\ \hline
+1 & Sekretariat Daerah & 5 \\ \hline
+2 & Sekretariat DPRD & 65 \\ \hline
+3 & Inspektorat Daerah & 1 \\ \hline
+4 & Dinas Pendidikan, Pemuda dan Olahraga & 1 \\ \hline
+5 & Dinas Kebudayaan dan Pariwisata & 2 \\ \hline
+6 & Dinas Kesehatan & 47 \\ \hline
+7 & Dinas Perhubungan & 2 \\ \hline
+8 & Dinas Komunikasi, Informatika dan Persandian & 8 \\ \hline
+9 & Dinas Pekerjaan Umum dan Tata Ruang & 6 \\ \hline
+10 & Dinas Perumahan dan Kawasan Permukiman & 0 \\ \hline
+11 & Dinas Koperasi, Usaha Kecil, Menengah, Perdagangan dan Perindustrian & 10 \\ \hline
+12 & Dinas Pertanian, Hortikultura, dan Perkebunan & 0 \\ \hline
+13 & Dinas Peternakan, Kesehatan Hewan dan Perikanan & 31 \\ \hline
+14 & Dinas Kependudukan dan Pencatatan Sipil & 32 \\ \hline
+15 & Dinas Sosial & 37 \\ \hline
+16 & Dinas Tenaga Kerja & 4 \\ \hline
+17 & Dinas Lingkungan Hidup & 7 \\ \hline
+18 & Dinas Pemberdayaan Masyarakat Desa & 10 \\ \hline
+19 & Dinas Pengendalian Penduduk, Keluarga Berencana, Pemberdayaan Perempuan, dan Perlindungan Anak & 38 \\ \hline
+20 & Dinas Penanaman Modal dan Pelayanan Terpadu Satu Pintu & 6 \\ \hline
+21 & Dinas Arsip dan Perpustakaan & 45 \\ \hline
+22 & Dinas Pangan & 0 \\ \hline
+23 & Satuan Polisi Pamong Praja dan Pemadam Kebakaran & 5 \\ \hline
+24 & Badan Keuangan dan Aset Daerah & 33 \\ \hline
+25 & Badan Pendapatan Daerah & 8 \\ \hline
+26 & Badan Perencanaan Pembangunan, Riset dan Inovasi Daerah & 3 \\ \hline
+27 & Badan Kepegawaian dan Pengembangan Sumber Daya Manusia & 11 \\ \hline
+28 & Badan Penanggulangan Bencana Daerah & 22 \\ \hline
+29 & Badan Kesatuan Bangsa dan Politik & 2 \\ \hline
+30 & Bagian Umum dan Keuangan Sekretariat Daerah & 1 \\ \hline
+31 & Bagian Organisasi Sekretariat Daerah & 0 \\ \hline
+32 & Bagian Pemerintahan Sekretariat Daerah & 0 \\ \hline
+33 & Bagian Kesejahteraan Rakyat Sekretariat Daerah & 0 \\ \hline
+34 & Bagian Hukum Sekretariat Daerah & 0 \\ \hline
+35 & Bagian Administrasi Pembangunan Sekretariat Daerah & 0 \\ \hline
+36 & Bagian Perekonomian dan Sumber Daya Alam Sekretariat Daerah & 0 \\ \hline
+37 & Bagian PBJ Sekretariat Daerah & 0 \\ \hline
+38 & Bagian Protokol dan Komunikasi Pimpinan Sekretariat Daerah & 0 \\ \hline
+39 & RSUD dan Puskesmas & 61 \\ \hline
+40 & RSUD Sayang & 1 \\ \hline
+41 & RSUD Cimacan & 0 \\ \hline
+42 & RSUD Pagelaran & 0 \\ \hline
+43 & RSUD Sindangbarang & 0 \\ \hline
+44 & Kecamatan & 2 \\ \hline
+45 & Kecamatan Pagelaran & 1 \\ \hline
+46 & Kecamatan Agrabinta & 8 \\ \hline
+47 & Kecamatan Bojongpicung & 2 \\ \hline
+48 & Kecamatan Cianjur & 13 \\ \hline
+49 & Kecamatan Cibeber & 20 \\ \hline
+50 & Kecamatan Cilaku & 10 \\ \hline
+51 & Kecamatan Ciranjang & 2 \\ \hline
+52 & Kecamatan Cugenang & 16 \\ \hline
+53 & Kecamatan Cikalongkulon & 2 \\ \hline
+54 & Kecamatan Campaka & 0 \\ \hline
+55 & Kecamatan Cibinong & 6 \\ \hline
+56 & Kecamatan Cidaun & 1 \\ \hline
+57 & Kecamatan Campakamulya & 1 \\ \hline
+58 & Kecamatan Cikadu & 1 \\ \hline
+59 & Kecamatan Cijati & 1 \\ \hline
+60 & Kecamatan Cipanas & 15 \\ \hline
+61 & Kecamatan Gekbrong & 6 \\ \hline
+62 & Kecamatan Haurwangi & 2 \\ \hline
+63 & Kecamatan Karangtengah & 1 \\ \hline
+64 & Kecamatan Kadupandak & 1 \\ \hline
+65 & Kecamatan Leles & 5 \\ \hline
+66 & Kecamatan Mande & 6 \\ \hline
+67 & Kecamatan Naringgul & 6 \\ \hline
+68 & Kecamatan Pacet & 17 \\ \hline
+69 & Kecamatan Pasirkuda & 0 \\ \hline
+70 & Kecamatan Sukaluyu & 5 \\ \hline
+71 & Kecamatan Sukaresmi & 14 \\ \hline
+72 & Kecamatan Sukanagara & 5 \\ \hline
+73 & Kecamatan Sindangbarang & 1 \\ \hline
+74 & Kecamatan Takokak & 8 \\ \hline
+75 & Kecamatan Tanggeung & 18 \\ \hline
+76 & Kecamatan Warungkondang & 0 \\ \hline
+
 \rowcolor{lightgray}
-\multicolumn{2}{|c|}{\textbf{Total}} & \textbf{651} \\ \hline
+\multicolumn{2}{|c|}{\textbf{Total SOP}} & \textbf{700} \\ \hline
 
 \end{longtable}
 }
 
+
 Sebagaimana disajikan pada Tabel~\ref{tab:rekap_jumlah_sop}, total SOP yang telah
 disusun pada seluruh instansi di lingkungan Pemerintah Kabupaten Cianjur
-berjumlah \textbf{651 SOP}. Jumlah tersebut tersebar pada berbagai perangkat
+berjumlah \textbf{700 SOP}. Jumlah tersebut tersebar pada berbagai perangkat
 daerah dengan karakteristik dan kebutuhan layanan yang berbeda-beda. Instansi
 yang memiliki ruang lingkup layanan luas dan kompleks cenderung memiliki jumlah
 SOP yang lebih banyak, sementara instansi dengan fungsi yang lebih spesifik
@@ -208,7 +210,7 @@ aktif atau terbit.
 \endlastfoot
 
 1 & Aktif & 2 \\ \hline
-2 & Konsep & 581 \\ \hline
+2 & Konsep & 628 \\ \hline
 3 & Periksa & 61 \\ \hline
 4 & Perbaikan & 3 \\ \hline
 5 & Setuju & 5 \\ \hline
@@ -218,13 +220,13 @@ aktif atau terbit.
 9 & Dicabut & 0 \\ \hline
 
 \rowcolor{lightgray}
-\multicolumn{2}{|c|}{\textbf{Total}} & \textbf{653} \\ \hline
+\multicolumn{2}{|c|}{\textbf{Total}} & \textbf{700} \\ \hline
 
 \end{longtable}
 }
 
 Sebagaimana disajikan pada Tabel~\ref{tab:rekap_status_verifikasi_sop}, sebagian
-besar SOP masih berada pada status \textit{konsep}, yaitu sebanyak \textbf{581 SOP}.
+besar SOP masih berada pada status \textit{konsep}, yaitu sebanyak \textbf{700 SOP}.
 Hal ini menunjukkan bahwa proses penyusunan SOP masih terus berjalan dan
 memerlukan tahapan lanjutan berupa pemeriksaan, perbaikan, dan persetujuan.
 Sementara itu, terdapat SOP yang telah berada pada tahap \textit{periksa},
