--- a/subcontents/502/01-sekretariat-daerah.tex
+++ b/subcontents/502/01-sekretariat-daerah.tex
@@ -1,5 +1,11 @@
 \subsection{Sekretariat Daerah}
 
+Daftar Standar Operasional Prosedur (SOP) pada Sekretariat Daerah Kabupaten Cianjur
+menyajikan SOP yang disusun untuk mendukung pelaksanaan fungsi koordinasi,
+perumusan kebijakan, serta pelayanan administrasi pemerintahan daerah.
+SOP yang ditampilkan mencerminkan peran Sekretariat Daerah sebagai unsur staf
+yang membantu kepala daerah dalam penyelenggaraan pemerintahan.
+
 {\footnotesize
 \begin{longtable}{
 |>{\centering\arraybackslash}p{0.5cm}
