--- a/subcontents/502/02-sekretariat-dprd.tex
+++ b/subcontents/502/02-sekretariat-dprd.tex
@@ -1,5 +1,9 @@
 \subsection{Sekretariat DPRD}
 
+Daftar SOP pada Sekretariat DPRD Kabupaten Cianjur mencerminkan prosedur
+kerja yang mendukung pelaksanaan fungsi DPRD, termasuk pelayanan administrasi,
+keuangan, persidangan, dan fasilitasi kegiatan alat kelengkapan DPRD.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
@@ -8,7 +12,7 @@ p{2.2cm}|
 >{\centering\arraybackslash}p{2cm}|
 >{\centering\arraybackslash}p{2cm}|
 }
-\caption{Daftar SOP dan Status Verifikasi} \label{tab:daftar_sop_status} \\
+\caption{Daftar SOP Sekretariat DPRD} \label{tab:daftar_sop_status} \\
 \hline
 \rowcolor{lightgray}
 \textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
@@ -27,8 +31,8 @@ p{2.2cm}|
 \hline
 \endlastfoot
 
-1  & Fasilitasi Penyelenggaraan Rapat Badan Musyawarah DPRD Kabupaten Cianjur & 171. 1 / / Setwan & 8 Januari 2026 & Konsep \\ \hline
-2  & Penyampaian Laporan Kinerja DPRD dalam E-KLIK DPRD & 171. 1 / 60 / Setwan & 8 Januari 2026 & Konsep \\ \hline
+1  & Fasilitasi Penyelenggaraan Rapat Badan Musyawarah DPRD Kabupaten Cianjur & 171.1/Setwan & 8 Januari 2026 & Konsep \\ \hline
+2  & Penyampaian Laporan Kinerja DPRD dalam E-KLIK DPRD & 171.1/60/ Setwan & 8 Januari 2026 & Konsep \\ \hline
 3  & Pengelolaan Website & 56.45.2019 & 19 November 2025 & Konsep \\ \hline
 4  & Pembuatan dan Pengagendaan Surat keluar & 56.32.2017 & 19 November 2025 & Konsep \\ \hline
 5  & Pelayanan Keprotokolan Dalam Kegiatan Rapat Rapat Di Lingkungan DPRD dan Penerimaan Tamu Kunjungan Kerja & 56.44.2017 & 19 November 2025 & Konsep \\ \hline
