--- a/subcontents/502/03-inspektorat-daerah.tex
+++ b/subcontents/502/03-inspektorat-daerah.tex
@@ -1,5 +1,9 @@
 \subsection{Inspektorat Daaerah}
 
+Daftar SOP pada Inspektorat Daerah menyajikan prosedur kerja yang mendukung
+pelaksanaan fungsi pengawasan internal, pemeriksaan, reviu, dan evaluasi
+penyelenggaraan pemerintahan daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
