--- a/subcontents/502/04-dinas-pendidikan.tex
+++ b/subcontents/502/04-dinas-pendidikan.tex
@@ -1,5 +1,9 @@
 \subsection{Dinas Pendidikan, Pemuda dan Olahraga}
 
+Daftar SOP pada Dinas Pendidikan, Pemuda dan Olahraga menggambarkan
+prosedur kerja dalam penyelenggaraan pendidikan, pembinaan kepemudaan, dan
+pengembangan olahraga.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
