--- a/subcontents/502/06-dinas-kesehatan.tex
+++ b/subcontents/502/06-dinas-kesehatan.tex
@@ -1,5 +1,9 @@
 \subsection{Dinas Kesehatan}
 
+Daftar SOP pada Dinas Kesehatan menyajikan prosedur kerja yang mendukung
+pelaksanaan urusan kesehatan, pembinaan fasilitas pelayanan kesehatan, serta
+peningkatan derajat kesehatan masyarakat.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
