--- a/subcontents/502/07-dinas-perhubungan.tex
+++ b/subcontents/502/07-dinas-perhubungan.tex
@@ -1,5 +1,8 @@
 \subsection{Dinas Perhubungan}
 
+Daftar SOP pada Dinas Perhubungan menyajikan prosedur kerja di bidang
+transportasi, lalu lintas, dan pelayanan perhubungan daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
