--- a/subcontents/502/08-dinas-komunikasi-dan-informatika.tex
+++ b/subcontents/502/08-dinas-komunikasi-dan-informatika.tex
@@ -1,5 +1,9 @@
 \subsection{Dinas Komunikasi, Informatika dan Persandian}
 
+Daftar SOP pada Diskominfo mencerminkan prosedur kerja di bidang pengelolaan
+informasi publik, sistem pemerintahan berbasis elektronik, serta persandian dan
+keamanan informasi.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
