--- a/subcontents/502/09-dinas-pekerjaan-umum-dan-penataan-ruang.tex
+++ b/subcontents/502/09-dinas-pekerjaan-umum-dan-penataan-ruang.tex
@@ -1,5 +1,8 @@
 \subsection{Dinas Pekerjaan Umum dan Tata Ruang}
 
+Daftar SOP pada DPUTR mencerminkan prosedur kerja yang mendukung
+penyelenggaraan urusan infrastruktur dan penataan ruang wilayah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
