--- a/subcontents/502/10-dinas-perumahan-kawasan-permukiman-dan-pertanahan.tex
+++ b/subcontents/502/10-dinas-perumahan-kawasan-permukiman-dan-pertanahan.tex
@@ -1,4 +1,4 @@
-\subsection{Dinas Perumahan dan Kawasan Pemukiman}
+\subsection{Dinas Perumahan dan Kawasan Permukiman }
 
 {\footnotesize
 \begin{longtable}{|
@@ -8,7 +8,7 @@ p{2.2cm}|
 >{\centering\arraybackslash}p{2cm}|
 >{\centering\arraybackslash}p{2cm}|
 }
-\caption{Daftar SOP Dinas Perumahan dan Kawasan Pemukiman} \label{tab:daftar_sop_status} \\
+\caption{Daftar SOP Dinas Perumahan dan Kawasan Permukiman } \label{tab:daftar_sop_status} \\
 \hline
 \rowcolor{lightgray}
 \textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
