--- a/subcontents/502/11-dinas-koperasi.tex
+++ b/subcontents/502/11-dinas-koperasi.tex
@@ -1,4 +1,8 @@
-\subsection{Dinas Koperasi, Usaha Kecil, Menengah, Perdagangan dan Perindustrian}
+\subsection{Dinas Koperasi, UKM, Perdagangan dan Perindustrian}
+
+Daftar SOP pada Dinas Koperasi, UKM, Perdagangan dan Perindustrian
+menggambarkan prosedur kerja dalam pembinaan usaha, perdagangan, dan
+pengembangan sektor industri daerah.
 
 {\footnotesize
 \begin{longtable}{|
@@ -8,7 +12,7 @@ p{2.2cm}|
 >{\centering\arraybackslash}p{2cm}|
 >{\centering\arraybackslash}p{2cm}|
 }
-\caption{Daftar SOP Dinas Koperasi, Usaha Kecil, Menengah, Perdagangan dan Perindustrian} \label{tab:daftar_sop_status} \\
+\caption{Daftar SOP Dinas Koperasi, UKM, Perdagangan dan Perindustrian} \label{tab:daftar_sop_status} \\
 \hline
 \rowcolor{lightgray}
 \textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
