--- a/subcontents/502/12-dinas-pertanian.tex
+++ b/subcontents/502/12-dinas-pertanian.tex
@@ -1,5 +1,8 @@
 \subsection{Dinas Pertanian, Hortikultura, dan Perkebunan}
 
+Daftar SOP pada instansi sektor pertanian mencerminkan prosedur kerja
+yang mendukung penyelenggaraan urusan pertanian, hortikultura, dan perkebunan.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
