--- a/subcontents/502/13-dinas-peternakan.tex
+++ b/subcontents/502/13-dinas-peternakan.tex
@@ -1,5 +1,12 @@
 \subsection{Dinas Peternakan, Kesehatan Hewan dan Perikanan}
 
+Daftar Standar Operasional Prosedur (SOP) pada Dinas Peternakan, Kesehatan
+Hewan dan Perikanan menyajikan prosedur kerja yang disusun untuk mendukung
+penyelenggaraan urusan peternakan, kesehatan hewan, dan perikanan di daerah.
+SOP yang ditampilkan mencerminkan pelaksanaan tugas dan fungsi dinas dalam
+pembinaan, pelayanan, serta pengendalian kegiatan di bidang peternakan dan
+perikanan.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
