--- a/subcontents/502/15-dinas-sosial.tex
+++ b/subcontents/502/15-dinas-sosial.tex
@@ -1,5 +1,9 @@
 \subsection{Dinas Sosial}
 
+Daftar SOP pada Dinas Sosial menyajikan prosedur kerja yang mendukung
+penyelenggaraan urusan sosial, perlindungan sosial, dan pemberdayaan masyarakat
+rentan.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
