--- a/subcontents/502/17-dinas-lingkungan-hidup.tex
+++ b/subcontents/502/17-dinas-lingkungan-hidup.tex
@@ -1,5 +1,9 @@
 \subsection{Dinas Lingkungan Hidup}
 
+Daftar SOP pada Dinas Lingkungan Hidup menyajikan prosedur kerja dalam
+pengelolaan lingkungan, pengendalian pencemaran, serta perlindungan dan
+pelestarian lingkungan hidup.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
