--- a/subcontents/502/18-dinas-pemberdaya-masyarakat.tex
+++ b/subcontents/502/18-dinas-pemberdaya-masyarakat.tex
@@ -1,5 +1,8 @@
 \subsection{Dinas Pemberdayaan Masyarakat Desa}
 
+Daftar SOP pada DPMD menyajikan prosedur kerja dalam pembinaan
+pemerintahan desa, pemberdayaan masyarakat, dan penguatan kelembagaan desa.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
