--- a/subcontents/502/23-badan-keuangan.tex
+++ b/subcontents/502/23-badan-keuangan.tex
@@ -1,5 +1,8 @@
 \subsection{Badan Keuangan dan Aset Daerah}
 
+Daftar SOP pada BKAD menyajikan prosedur kerja yang mendukung pengelolaan
+keuangan daerah, penatausahaan aset, serta pelaporan keuangan pemerintah daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
