--- a/subcontents/502/25-badan-perencanaan-pembangunan.tex
+++ b/subcontents/502/25-badan-perencanaan-pembangunan.tex
@@ -1,5 +1,9 @@
 \subsection{Badan Perencanaan Pembangunan, Riset dan Inovasi Daerah}
 
+Daftar SOP pada Bapperida mencerminkan prosedur kerja dalam perencanaan
+pembangunan daerah, pengendalian program, serta pengembangan riset dan inovasi
+daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
