--- a/subcontents/502/26-badan-kepegawaian-dan-pengembangan-sdm.tex
+++ b/subcontents/502/26-badan-kepegawaian-dan-pengembangan-sdm.tex
@@ -1,5 +1,8 @@
 \subsection{Badan Kepegawaian dan Pengembangan Sumber Daya Manusia}
 
+Daftar SOP pada BKPSDM menggambarkan prosedur kerja di bidang manajemen
+kepegawaian, pengembangan kompetensi, serta pembinaan aparatur sipil negara.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
@@ -38,11 +41,7 @@ p{2.2cm}|
 8  & Pengadaan ASN & -- & 2 Januari 2026 & Konsep \\ \hline
 9  & Pembuatan Izin Belajar & -- & 2 Januari 2026 & Konsep \\ \hline
 10 & Pelayanan Pengelolaan Laporan Harta Kekayaan Penyelenggara Negara & 16/104/2025 & 18 November 2025 & Periksa \\ \hline
-11 & SOP Unit Kedua & 8576587 & 12 November 2025 & Setuju \\ \hline
-12 & SOP Unit & 5675758 & 10 November 2025 & Periksa \\ \hline
-13 & SOP Arsip Pertama & 865759 & 4 November 2025 & Konsep \\ \hline
-14 & SOP Umum Pertama & 235487 & 3 November 2025 & Konsep \\ \hline
-15 & Pemberian Penghargaan Tanda Kehormatan Satyalancana Karya Satya & -- & 1 Januari 2025 & Konsep \\ \hline
+11 & Pemberian Penghargaan Tanda Kehormatan Satyalancana Karya Satya & -- & 1 Januari 2025 & Konsep \\ \hline
 
 
 \end{longtable}
