--- a/subcontents/502/27-badan-penanggulangan-bencana.tex
+++ b/subcontents/502/27-badan-penanggulangan-bencana.tex
@@ -1,5 +1,9 @@
 \subsection{Badan Penanggulangan Bencana Daerah}
 
+Daftar SOP pada BPBD mencerminkan prosedur kerja dalam penanggulangan
+bencana, mulai dari kesiapsiagaan, tanggap darurat, hingga rehabilitasi dan
+rekonstruksi.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
