--- a/subcontents/502/28-badan-kesatuan-bangsa.tex
+++ b/subcontents/502/28-badan-kesatuan-bangsa.tex
@@ -1,5 +1,8 @@
 \subsection{Badan Kesatuan Bangsa dan Politik}
 
+Daftar SOP pada Bakesbangpol menyajikan prosedur kerja yang mendukung
+pelaksanaan urusan kesatuan bangsa, politik dalam negeri, dan kewaspadaan dini.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
