--- a/subcontents/502/29-rsud-puskesmas.tex
+++ b/subcontents/502/29-rsud-puskesmas.tex
@@ -1,5 +1,9 @@
 \subsection{RSUD dan Puskesmas}
 
+Daftar SOP pada RSUD dan Puskesmas mencerminkan prosedur pelayanan
+kesehatan kepada masyarakat, baik pelayanan medis maupun administrasi
+penunjang pelayanan kesehatan.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
