--- a/502-bab-5-daftar-sop.tex
+++ b/502-bab-5-daftar-sop.tex
@@ -1,5 +1,26 @@
 \section{Daftar SOP Per Instansi}
 
+Setelah disajikan rekapitulasi jumlah Standar Operasional Prosedur (SOP) per
+instansi serta rekapitulasi status verifikasi SOP, subbab ini menyajikan daftar SOP
+pada setiap instansi di lingkungan Pemerintah Kabupaten Cianjur secara lebih rinci.
+Penyajian daftar SOP per instansi dimaksudkan untuk memberikan gambaran
+konkret mengenai jenis dan cakupan SOP yang telah disusun oleh masing-masing
+perangkat daerah.
+
+Daftar SOP per instansi menampilkan informasi pokok mengenai setiap SOP yang
+telah disusun, meliputi judul SOP, nomor SOP, tanggal pembuatan, serta status
+verifikasi. Informasi tersebut diperlukan untuk menunjukkan tingkat kematangan
+penyusunan SOP pada setiap instansi, sekaligus memudahkan penelusuran dan
+pemantauan SOP yang masih berada pada tahap penyusunan maupun yang telah
+memasuki tahapan verifikasi dan penerapan.
+
+Penyajian SOP secara terpisah untuk setiap instansi juga bertujuan untuk
+memperlihatkan keterkaitan antara SOP yang disusun dengan tugas dan fungsi
+organisasi. Dengan demikian, dapat dilihat bahwa SOP yang dihasilkan tidak hanya
+berjumlah secara kuantitatif, tetapi juga relevan dan mendukung pelaksanaan tugas
+administrasi pemerintahan dan pelayanan publik pada masing-masing perangkat
+daerah.
+
 \input{subcontents/502/01-sekretariat-daerah.tex}
 \input{subcontents/502/02-sekretariat-dprd.tex}
 \input{subcontents/502/03-inspektorat-daerah.tex}
@@ -23,6 +44,7 @@
 \input{subcontents/502/19-dinas-pengendalian-penduduk.tex}
 \input{subcontents/502/20-dinas-penanaman-modal.tex}
 \input{subcontents/502/21-dinas-arsip-perpustakaan.tex}
+\input{subcontents/502/32-dinas-pangan.tex}
 \input{subcontents/502/22-satpolpp-pemadam.tex}
 \input{subcontents/502/23-badan-keuangan.tex}
 \input{subcontents/502/24-badan-pendapatan-daerah.tex}
@@ -30,5 +52,50 @@
 \input{subcontents/502/26-badan-kepegawaian-dan-pengembangan-sdm.tex}
 \input{subcontents/502/27-badan-penanggulangan-bencana.tex}
 \input{subcontents/502/28-badan-kesatuan-bangsa.tex}
-\newpage
+\input{subcontents/502/30-bagian-umum-keuangan-sekda.tex}
+\input{subcontents/502/39-bagian-organisasi-sekda.tex}
+\input{subcontents/502/33-bagian-pemerintah-sekda.tex}
+\input{subcontents/502/34-bagian-kesejahteraan-rakyat-sekda.tex}
+\input{subcontents/502/35-bagian-hukum-sekda.tex}
+\input{subcontents/502/36-bagian-administrasi-pembangunan-sekda.tex}
+\input{subcontents/502/37-bagian-perekonomian-sdm-sekda.tex}
+\input{subcontents/502/38-bagian-pbj-sekda.tex}
+\input{subcontents/502/40-bagian-protokol-komunikasi-sekda.tex}
 \input{subcontents/502/29-rsud-puskesmas.tex}
+\input{subcontents/502/31-rsud-sayang.tex}
+\input{subcontents/502/73-rsud-cimacan.tex}
+\input{subcontents/502/74-rsud-pagelaran.tex}
+\input{subcontents/502/75-rsud-sindangbarang.tex}
+\input{subcontents/502/76-kecamatan.tex}
+\input{subcontents/502/41-kecamatan-agrabinta.tex}
+\input{subcontents/502/42-kecamatan-bojongpicung.tex}
+\input{subcontents/502/43-kecamatan-cianjur.tex}
+\input{subcontents/502/44-kecamatan-cibeber.tex}
+\input{subcontents/502/45-kecamatan-cilaku.tex}
+\input{subcontents/502/46-kecamatan-ciranjang.tex}
+\input{subcontents/502/47-kecamatan-cugenang.tex}
+\input{subcontents/502/48-kecamatan-cikalongkulon.tex}
+\input{subcontents/502/49-kecamatan-campaka.tex}
+\input{subcontents/502/50-kecamatan-cibinong.tex}
+\input{subcontents/502/51-kecamatan-cidaun.tex}
+\input{subcontents/502/52-kecamatan-campakamulya.tex}
+\input{subcontents/502/53-kecamatan-cikadu.tex}
+\input{subcontents/502/54-kecamatan-cijati.tex}
+\input{subcontents/502/55-kecamatan-cipanas.tex}
+\input{subcontents/502/56-kecamatan-gekbrong.tex}
+\input{subcontents/502/57-kecamatan-haurwangi.tex}
+\input{subcontents/502/58-kecamatan-karangtengah.tex}
+\input{subcontents/502/59-kecamatan-kadupandak.tex}
+\input{subcontents/502/60-kecamatan-leles.tex}
+\input{subcontents/502/61-kecamatan-mande.tex}
+\input{subcontents/502/62-kecamatan-naringgul.tex}
+\input{subcontents/502/63-kecamatan-pacet.tex}
+\input{subcontents/502/64-kecamatan-pagelaran.tex}
+\input{subcontents/502/65-kecamatan-pasirkuda.tex}
+\input{subcontents/502/66-kecamatan-sukaluyu.tex}
+\input{subcontents/502/67-kecamatan-sukaresmi.tex}
+\input{subcontents/502/68-kecamatan-sukanagara.tex}
+\input{subcontents/502/69-kecamatan-sindangbarang.tex}
+\input{subcontents/502/70-kecamatan-takokak.tex}
+\input{subcontents/502/71-kecamatan-tanggeung.tex}
+\input{subcontents/502/72-kecamatan-warungkondang.tex}
