--- a/subcontents/502/24-badan-pendapatan-daerah.tex
+++ b/subcontents/502/24-badan-pendapatan-daerah.tex
@@ -1,5 +1,9 @@
 \subsection{Badan Pendapatan Daerah}
 
+Daftar SOP pada Badan Pendapatan Daerah mencerminkan prosedur kerja dalam
+pengelolaan pendapatan daerah, pelayanan perpajakan dan retribusi, serta
+pengendalian penerimaan daerah.
+
 {\footnotesize
 \begin{longtable}{|
 >{\centering\arraybackslash}p{0.5cm}|
@@ -8,7 +12,11 @@ p{2.2cm}|
 >{\centering\arraybackslash}p{2cm}|
 >{\centering\arraybackslash}p{2cm}|
 }
-\caption{Daftar SOP Badan Pendapatan Daerah} \label{tab:daftar_sop_status} \\
+\caption{Daftar SOP Badan Pendapatan Daerah}
+
+Daftar SOP pada Badan Pendapatan Daerah mencerminkan prosedur kerja dalam
+pengelolaan pendapatan daerah, pelayanan perpajakan dan retribusi, serta
+pengendalian penerimaan daerah.\label{tab:daftar_sop_status} \\
 \hline
 \rowcolor{lightgray}
 \textbf{No} & \textbf{Judul SOP} & \textbf{Nomor SOP} & \textbf{Tanggal Pembuatan} & \textbf{Status Verifikasi} \\
